#
# Any copyright is dedicated to the Public Domain.
# https://creativecommons.org/publicdomain/zero/1.0/
#

[package]
name = "pgsscale"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
clap = "~2.27.0"
thiserror = "1.0"
