#
# SPDX-FileCopyrightText: 2021 William Swartzendruber <wswartzendruber@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pgs"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"
license = "OSL-3.0"

[dependencies]
byteorder = "1.3"
thiserror = "1.0"
