#
# Copyright 2021 William Swartzendruber
#
# Any copyright is dedicated to the Public Domain.
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pgs"
description = "Presentation Graphics Stream processing library"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/wswartzendruber/pgs-tools"

[dependencies]
byteorder = "1.3"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8.4"
