#
# SPDX-FileCopyrightText: 2021 William Swartzendruber <wswartzendruber@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pgsdump"
description = "Dumps PGS subtitle data"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"
license = "OSL-3.0"
repository = "https://github.com/wswartzendruber/pgsmod"

[dependencies]
pgs = { path = "../pgs" }
clap = "~2.27.0"
