#
# Any copyright is dedicated to the Public Domain.
# https://creativecommons.org/publicdomain/zero/1.0/
#

[package]
name = "pgsmod"
description = "Modifies PGS subtitles"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"
license = "OSL-3.0"
repository = "https://github.com/wswartzendruber/pgsmod"

[dependencies]
byteorder = "1.3"
clap = "~2.27.0"
thiserror = "1.0"
