#
# Any copyright is dedicated to the Public Domain.
#
# Copyright 2021 William Swartzendruber
#
# SPDX-License-Identifier: CC0-1.0
#

[package]
name = "pgstest"
description = "Tests PGS subtitle data"
version = "0.1.0"
authors = ["William Swartzendruber <wswartzendruber@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/wswartzendruber/pgsmod"

[dependencies]
pgs = { path = "../pgs" }
clap = "~2.27.0"
